cluster/apps/kubelet-csr-approver/kubelet-csr-approver/app/network-policies.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# CiliumNetworkPolicy for kubelet-csr-approver
# Operator that approves kubelet CSRs - needs DNS and kube-api access
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-dns-egress
  namespace: kubelet-csr-approver
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kubelet-csr-approver
  egress:
    - toServices:
        - k8sService:
            serviceName: kube-dns
            namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-api-egress
  namespace: kubelet-csr-approver
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kubelet-csr-approver
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow health probe ingress from kubelet (host)
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-health-probe-ingress
  namespace: kubelet-csr-approver
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kubelet-csr-approver
  ingress:
    - fromEntities:
        - host
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
# Allow metrics scraping from vmagent
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-metrics-ingress
  namespace: kubelet-csr-approver
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kubelet-csr-approver
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: observability
            k8s:app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
